--- a/API/appsettings.Production.json
+++ b/API/appsettings.Production.json
@@ -16,6 +16,13 @@
   "AllowedOrigin": {
     "http": "https://ticketing.buluttakin.com",
     "websocket": "wss://ticketing.buluttakin.com"
+  },
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "/https/Ticketing_Client.pfx"
+      }
+    }
   }
 
 }
