--- a/API/API.csproj
+++ b/API/API.csproj
@@ -9,7 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
+	  <PackageReference Include="Hangfire.Core" Version="1.7.33" />
+	  <PackageReference Include="Hangfire.Dashboard.Basic.Authentication" Version="5.0.0" />
+	  <PackageReference Include="Hangfire.SqlServer" Version="1.7.33" />
+	  <PackageReference Include="Hangfire.AspNetCore" Version="1.7.33" />
+	  <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
