--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -17,5 +17,9 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server =192.168.62.76; Database = Ticketing; user id=sa;password=123qaz!@#"
-  }  
+  },
+  "HangfireSettings": {
+    "UserName": "TicketingJobAdmin",
+    "Password": "Ticketing@123"
+  }
 }
