--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -29,7 +29,7 @@
       "launchUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "https://localhost:5001;http://localhost:5002"
+        //"ASPNETCORE_URLS": "https://localhost:5001;http://localhost:5002"
       },
       "distributionName": "" 
     }
