--- a/API/appsettings.Production.json
+++ b/API/appsettings.Production.json
@@ -7,7 +7,7 @@
   },
 
   "IdentityServer": {
-    "Authority": "https://login.shonizcloud.ir"
+    "Authority": "..."
   },
 
   "ConnectionStrings": {
