--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -12,10 +12,11 @@
   },
 
   "IdentityServer": {
-    "Authority": "https://login.shonizcloud.ir"
+    "Authority": "..."
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server =192.168.62.76; Database = Ticketing; user id=sa;password=123qaz!@#"
-  }
-  }
+    "DefaultConnection": "Server =...; Database = Ticketing; user id=sa;password=123qaz!@#"
+  } 
+   
+}
