--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -12,14 +12,10 @@
   },
 
   "IdentityServer": {
-    "Authority": "https://login.shonizcloud.ir"
+    "Authority": "..."
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server =192.168.62.76; Database = Ticketing; user id=sa;password=123qaz!@#"
-  },
-  "HangfireSettings": {
-    "UserName": "TicketingJobAdmin",
-    "Password": "Ticketing@123"
-  }
+    "DefaultConnection": "Server =...; Database = Ticketing; user id=sa;password=123qaz!@#"
+  }  
 }
