--- a/API/appsettings.Production.json
+++ b/API/appsettings.Production.json
@@ -14,8 +14,8 @@
     "DefaultConnection": "Server =Ticketing_DB; Database = Ticketing; user id=sa;password=123qaz!@#"
   },
   "AllowedOrigin": {
-    "http": "https://ticketing.buluttakin.com",
-    "websocket": "wss://ticketing.buluttakin.com"
+    "http": "https://...",
+    "websocket": "wss://..."
   },
   "Kestrel": {
     "Certificates": {
